<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMyProfile">

    <ImageView
        android:id="@+id/imageViewMyAvatar"
        android:layout_width="98dp"
        android:layout_height="92dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="89dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/textViewName"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMyAvatar" />

    <TextView
        android:id="@+id/textViewMyName"
        android:layout_width="173dp"
        android:layout_height="38dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textLabelStudentId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toEndOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMyAvatar"
        app:layout_constraintVertical_bias="0.761" />

    <TextView
        android:id="@+id/textLabelStudentId"
        android:layout_width="94dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="@string/textLabelStudentId"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewMyStudentId"
        android:layout_width="171dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textLabelStudentId"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textLabelDepartment"
        android:layout_width="95dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/textLabelDepartment"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLabelStudentId" />

    <TextView
        android:id="@+id/textViewMyDepartment"
        android:layout_width="170dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toEndOf="@+id/textLabelDepartment"
        app:layout_constraintTop_toBottomOf="@+id/textLabelStudentId" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/buttonEdit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLabelDepartment"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>